; ModuleID = '/home/carl/AnghaBench/netdata/daemon/extr_main.c_make_dns_decision.c'
source_filename = "/home/carl/AnghaBench/netdata/daemon/extr_main.c_make_dns_decision.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"yes\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"no\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"heuristic\00", align 1
@.str.3 = private unnamed_addr constant [124 x i8] c"Invalid configuration option '%s' for '%s'/'%s'. Valid options are 'yes', 'no' and 'heuristic'. Proceeding with 'heuristic'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @make_dns_decision(i8* %0, i8* %1, i8* %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32* %3, i32** %9, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = call i8* @config_get(i8* %11, i8* %12, i8* %13)
  store i8* %14, i8** %10, align 8
  %15 = load i8*, i8** %10, align 8
  %16 = call i64 @strcmp(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %4
  store i32 1, i32* %5, align 4
  br label %36

19:                                               ; preds = %4
  %20 = load i8*, i8** %10, align 8
  %21 = call i64 @strcmp(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0), i8* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %24, label %23

23:                                               ; preds = %19
  store i32 0, i32* %5, align 4
  br label %36

24:                                               ; preds = %19
  %25 = load i8*, i8** %10, align 8
  %26 = call i64 @strcmp(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0), i8* %25)
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %33

28:                                               ; preds = %24
  %29 = load i8*, i8** %10, align 8
  %30 = load i8*, i8** %6, align 8
  %31 = load i8*, i8** %7, align 8
  %32 = call i32 @error(i8* getelementptr inbounds ([124 x i8], [124 x i8]* @.str.3, i64 0, i64 0), i8* %29, i8* %30, i8* %31)
  br label %33

33:                                               ; preds = %28, %24
  %34 = load i32*, i32** %9, align 8
  %35 = call i32 @simple_pattern_is_potential_name(i32* %34)
  store i32 %35, i32* %5, align 4
  br label %36

36:                                               ; preds = %33, %23, %18
  %37 = load i32, i32* %5, align 4
  ret i32 %37
}

declare dso_local i8* @config_get(i8*, i8*, i8*) #1

declare dso_local i64 @strcmp(i8*, i8*) #1

declare dso_local i32 @error(i8*, i8*, i8*, i8*) #1

declare dso_local i32 @simple_pattern_is_potential_name(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
